style: increase scroll offset to prevent fixed header overlap

--- a/src/styles.css
+++ b/src/styles.css
@@ -41,7 +41,7 @@ html {
 }
 
 section {
-  scroll-margin-top: 80px;
+  scroll-margin-top: 100px;
   /* Offset for fixed header */
 }
 
